--- a/pom.xml
+++ b/pom.xml
@@ -20,4 +20,44 @@
       <version>42.2.5</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>                
+            <artifactId>maven-dependency-plugin</artifactId>                
+            <version>3.0.1</version>                
+            <executions>                    
+                <execution>                        
+                    <id>copy-dependencies</id>                        
+                    <phase>package</phase>                        
+                    <goals>
+                        <goal>copy-dependencies</goal>
+                    </goals>                    
+                </execution>                
+            </executions>            
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.6.0</version>
+          <configuration>
+              <mainClass>edu.escuelaing.arep.HttpServer</mainClass>
+          </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.1.1</version>
+      </plugin>
+    </plugins>
+</build>
 </project>
