--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.13</version>
       <scope>test</scope>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
@@ -58,6 +59,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.1.1</version>
       </plugin>
+            
     </plugins>
 </build>
 </project>
